<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtWelcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtUser"
        android:layout_width="289dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:background="#ECE8E8"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:hint="@string/edtxtUser"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDescLogin" />

    <EditText
        android:id="@+id/edtxtPass"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="#ECE8E8"
        android:drawableLeft="@drawable/key"
        android:hint="@string/edtxtPass"
        android:inputType="textPassword"
        android:padding="5dip"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtUser" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnLogin"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtPass" />

    <TextView
        android:id="@+id/txtNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtNewUser"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnGoReg"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnGoReg"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewUser" />

    <ImageView
        android:id="@+id/imgDescLogin"
        android:layout_width="147dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgDescLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        app:srcCompat="@drawable/minibudgy" />
</androidx.constraintlayout.widget.ConstraintLayout>