<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".RegistrationFragment">

    <TextView
        android:id="@+id/txtPersD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtPersD"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtFName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPersD" />

    <EditText
        android:id="@+id/edtxtLstName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtLstName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtName" />

    <EditText
        android:id="@+id/edtxtEmail"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtLstName" />

    <EditText
        android:id="@+id/edtxtPhno"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtPhno"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtEmail" />

    <Button
        android:id="@+id/btnRegSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnRegSub"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtConPass" />

    <EditText
        android:id="@+id/edtxtRegPass"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtRegPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtPhno" />

    <EditText
        android:id="@+id/edtxtConPass"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/edtxtConPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtRegPass" />

</androidx.constraintlayout.widget.ConstraintLayout>